# mnemosyne

./: .editorconfig  .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  circle.yml
core/: Cargo.toml  build.rs
core/src/: chars.rs  errors.rs  forktable.rs  lib.rs  position.rs
core/src/ast/: mod.rs
core/src/compile/: mod.rs
core/src/llvm/: mod.rs
core/src/semantic/: annotations.rs  ast.rs  mod.rs  types.rs
doc/: Style.md  functions.md
doc/notes/: README.md  datatypes.md  functions.md  sigils.md  sugar.md
manganese/: Cargo.toml
mn/: Cargo.toml
mnemosyne/: Cargo.toml
parser/: Cargo.toml
parser/src/: lib.rs  tests.rs
src/: main.rs
