[package]
name = "mnemosyne"
version = "0.1.0"
authors = ["Hawk Weisman <hi@hawkweisman.me>"]
build = "build.rs"

[dependencies]
combine = "^1.0.0"
log = "0.3"
libc = "*"
itertools = "^0.4"
llvm-sys = "*"

[dependencies.iron_llvm]
git = "https://github.com/jauhien/iron-llvm.git"

[dev-dependencies]
env_logger = "0.3"
